--- a/templates/activities.html
+++ b/templates/activities.html
@@ -30,7 +30,9 @@ Deposit in bank of happiness.(Create a list)
   </tr>
   {% endfor %}
 </table>
-
+<a href="{{url_for('insert_activities',name=name)}}"
+  >Customize your own currency/list</a
+>
 {% endblock %}
 
 <!-- 错题本 
