--- a/templates/sum.html
+++ b/templates/sum.html
@@ -30,6 +30,11 @@
   {{form.hidden_tag()}} {{form.checkout.label}}
   <p>{{form.checkout()}}</p>
 </form>
+<button>draw a chart</button>
+<button>search by date</button>
+<button>search by currency</button>
+<button>sum of the week</button>
+
 {% endblock %}
 
 <!-- 注意endif 是在else 之后 -->
