--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <header>
       <a href="{{url_for('index')}}">Home</a>
       <a href="{{url_for('activities')}}">Activities</a>
+      <a href="{{url_for('account')}}">Account</a>
       {% if g.user %}
       <p>User id: {{g.user}}</p>
       <p><a href="{{url_for('logout')}}">Log out</a></p>
