--- a/templates/activities.html
+++ b/templates/activities.html
@@ -29,11 +29,7 @@ Deposit in bank of happiness.(Create a list)
         >Deposit</a
       >
     </td>
-    <td>
-      <a href="{{url_for('delete',activity_id=activity['activity_id'])}}"
-        >Delete</a
-      >
-    </td>
+    <td></td>
   </tr>
   {% endfor %}
 </table>
@@ -43,9 +39,6 @@ Deposit in bank of happiness.(Create a list)
 
 {{message}} {% endblock %}
 
-<!-- 错题本 
-<table>
-  <tr>
-    <td>{{wines}}</td>
-  </tr>
-</table> -->
+<!-- <a href="{{url_for('delete',activity_id=activity['activity_id'])}}"
+        >Delete</a
+      > -->
