--- a/templates/activity.html
+++ b/templates/activity.html
@@ -13,7 +13,7 @@
 <a href="{{url_for('add_to_account',activity_id=activity['activity_id'])}}"
   >Add to Account</a
 >
-
+<a href="{{url_for('delete',activity_id=activity['activity_id'])}}">Delete</a>
 {% endblock %} '''
 <!-- <a href="{{url_for('delete',activity_id=activity['activity_id'])}}">Delete</a>
 <br /> -->
